--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>css practice</title>
+        <title>Jeeto Pakistan</title>
         <meta name="author" content="AbdulAhad">
         <link href="./style.css" type="text/css" rel="stylesheet" />
+        <script src="./main.mjs"></script>
     </head>
     <body>
         <!-- header -->
@@ -23,7 +24,7 @@
                 <label for="box1">
                     <span class="box">1</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/ac.png">
             </div>
 
             <div class="box2nd">
@@ -31,7 +32,7 @@
                 <label for="box2">
                     <span class="box">2</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/bike.png">
             </div>
 
             <div class="box3rd">
@@ -39,7 +40,7 @@
                 <label for="box3">
                     <span class="box">3</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/car.png">
             </div>
 
             <div class="box4th">
@@ -47,7 +48,7 @@
                 <label for="box4">
                     <span class="box">4</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/watermelon.png">
             </div>
 
             <div class="box5th">
@@ -55,7 +56,7 @@
                 <label for="box5">
                     <span class="box">5</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/mobile.png">
             </div>
         </div>
         <!-- second row -->
@@ -65,7 +66,7 @@
                 <label for="box6">
                     <span class="box">6</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/laugh.png">
             </div>
 
             <div class="box7th">
@@ -73,7 +74,7 @@
                 <label for="box7">
                     <span class="box">7</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/laptop.png">
             </div>
 
             <div class="box8th">
@@ -81,7 +82,7 @@
                 <label for="box8">
                     <span class="box">8</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/elephant.png">
             </div>
 
             <div class="box9th">
@@ -89,7 +90,7 @@
                 <label for="box9">
                     <span class="box">9</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/bike.png">
             </div>
 
             <div class="box10th">
@@ -97,7 +98,7 @@
                 <label for="box10">
                     <span class="box">10</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/fan.png">
             </div>
         </div>
         <!-- third row -->
@@ -107,7 +108,7 @@
                 <label for="box11">
                     <span class="box">11</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/juice.png">
             </div>
 
             <div class="box12th">
@@ -115,7 +116,7 @@
                 <label for="box12">
                     <span class="box">12</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/gold.png">
             </div>
 
             <div class="box13th">
@@ -123,7 +124,7 @@
                 <label for="box13">
                     <span class="box">13</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/bike.png">
             </div>
 
             <div class="box14th">
@@ -131,7 +132,7 @@
                 <label for="box14">
                     <span class="box">14</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/generator.png">
             </div>
 
             <div class="box15th">
@@ -139,7 +140,7 @@
                 <label for="box15">
                     <span class="box">15</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/juicer.png">
             </div>
         </div>
         <!-- fourth row -->
@@ -149,7 +150,7 @@
                 <label for="box16">
                     <span class="box">16</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/laugh.png">
             </div>
 
             <div class="box17th">
@@ -157,7 +158,7 @@
                 <label for="box17">
                     <span class="box">17</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/car.png">
             </div>
 
             <div class="box18th">
@@ -165,7 +166,7 @@
                 <label for="box18">
                     <span class="box">18</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/ticket.png">
             </div>
 
             <div class="box19th">
@@ -173,7 +174,7 @@
                 <label for="box19">
                     <span class="box">19</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/water.png">
             </div>
 
             <div class="box20th">
@@ -181,17 +182,17 @@
                 <label for="box20">
                     <span class="box">20</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/laugh.png">
             </div>
         </div>
         <!-- fifth row -->
-        <div class="fourthrow">
+        <div class="fifthrow">
             <div class="box21th">
                 <input type="radio" id="box21">
                 <label for="box21">
                     <span class="box">21</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/teddy.png">
             </div>
 
             <div class="box22th">
@@ -199,7 +200,7 @@
                 <label for="box22">
                     <span class="box">22</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/bike.png">
             </div>
 
             <div class="box23th">
@@ -207,7 +208,7 @@
                 <label for="box23">
                     <span class="box">23</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/banana.png">
             </div>
 
             <div class="box24th">
@@ -215,7 +216,7 @@
                 <label for="box24">
                     <span class="box">24</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/cycle.png">
             </div>
 
             <div class="box25th">
@@ -223,12 +224,9 @@
                 <label for="box25">
                     <span class="box">25</span>
                 </label>
-                <span class="inam"></span>
+                <img class='inam' src="./images/iron.png">
             </div>
         </div>
-        <br/>
-        <br/>
-        <br/>
         <hr/>
         <div class="instructions">
             <p>Thanks for visiting Regards! Muhammad Ahad&copy;</p>
